adding basic bookmarks endpoint
